welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value golomp
    a1 = golomp(num -1)
         ^