welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var a1 = 0
  if (num>0)
  {
    a1 = golomp(num -1)
  }
  else
  {
    a1 = 1
  }
  return a1
}